--- a/xxx/styles.css
+++ b/xxx/styles.css
@@ -142,7 +142,90 @@ header .icons img {
     padding: 5px; 
 }
 
+.products {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* два контейнера в строке */
+    gap: 20px;
+    margin: 0 20px;
+}
 
+.products .product {
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: auto; /* Автоматическая высота контейнера */
+    box-sizing: border-box; /* Включает padding и border в общую ширину и высоту */
+}
+
+.products .product img {
+    width: 100%; 
+    height: 200px; /* Фиксированная высота для всех изображений */
+    object-fit: contain; /* Вмещать изображение в контейнер без обрезки */
+    margin-bottom: 10px;
+}
+
+.products .product .name {
+    text-align: left;
+    width: 100%;
+    margin-bottom: 10px;
+    font-size: 16px; /* Фиксированный размер шрифта для текста */
+}
+
+.products .product .rating {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.products .product .rating .star {
+    color: gold;
+    font-size: 20px;
+}
+
+.products .product .rating .rating-value {
+    margin-left: 10px;
+    font-size: 14px;
+    color: #555;
+}
+
+.products .product .price {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.products .product .price .old-price {
+    color: red;
+    text-decoration: line-through;
+    margin-left: 10px;
+}
+
+.products .product button {
+    margin-top: auto;
+    padding: 10px;
+    background-color: #333;
+    color: white;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    border-radius: 15px; /* Закругление краев */
+}
+
+.footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
 
 #load-more-button {
     display: block;
