--- a/xxx/styles.css
+++ b/xxx/styles.css
@@ -14,8 +14,9 @@ header {
     position: fixed; /* Фиксированное позиционирование */
     width: 100%;
     top: 0;
-
+    z-index: 1001;  /* хедер находится над уведомлениями */
 }
+
 header .logo {
     font-size: 24px;
 }
@@ -59,8 +60,35 @@ header .icons img {
     height: 20px;
 }
 
+.notifications {
+    display: none;
+    background-color: #f8d7da;
+    color: #721c24;
+    padding: 10px;
+    text-align: center;
+    position: fixed; /* Фиксированное позиционирование */
+    top: 60px; /* Позиционируем ниже хедера */
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    width: 100%; /* Ширина уведомления */
+}
 
+.notifications .notification {
+    position: relative;
+}
 
+.notifications .close-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: none;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+}
 
 .container {
     display: flex;
