--- a/qqq/cart-styles.css
+++ b/qqq/cart-styles.css
@@ -1,7 +1,8 @@
-body {
+body, html {
     font-family: Arial, sans-serif;
     margin: 3% 0;
     padding: 0;
+    height: 100%;
 }
 header {
     background-color: #333;
@@ -107,6 +108,7 @@ header .icons a {
     margin: 20px;
     display: flex;
     justify-content: flex-start;
+    margin-bottom: 60px; /* Отступ снизу для футера */
 }
 .order-form-container form {
     display: grid;
@@ -164,6 +166,7 @@ header .icons a {
 
 .order-text {
     margin: 0 40px;
+    text-align: center;
 }
 h1 {
     margin: 60px 40px 0 0;
@@ -172,12 +175,12 @@ h1 {
 #comment-container {
     margin-top: 5px;
 }
-footer {
+.footer {
     background-color: #333;
     color: white;
     text-align: center;
-    padding: 10px;
-    position: fixed;
+    padding: 10px 0;
     width: 100%;
     bottom: 0;
+    /* position: fixed; */
 }
