--- a/qqq/orders-styles.css
+++ b/qqq/orders-styles.css
@@ -56,3 +56,65 @@ header .icons a {
     cursor: pointer;
     margin-left: 5px;
 }
+/* Стили для модальных окон */
+.modal {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    justify-content: center;
+    align-items: center;
+    z-index: 1002;
+}
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40%;
+    max-width: 500px;
+    position: relative;
+    border-radius: 5px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    text-align: left;
+}
+/* Стили для кнопки закрытия модального окна */
+.close {
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover,
+.close:focus {
+    color: red;
+    cursor: pointer;
+}
+/* Стили для заголовков и текста в модальных окнах */
+.modal h2 {
+    margin-bottom: 20px;
+}
+.modal p {
+    margin: 5px 0;
+}
+/* Стили для кнопок в модальных окнах */
+.modal button {
+    display: inline-block;
+    padding: 10px;
+    margin-top: 20px;
+    background-color: #f1eee9;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.modal button:hover {
+    background-color: tomato;
+    color: white;
+}
