--- a/qqq/orders-styles.css
+++ b/qqq/orders-styles.css
@@ -118,3 +118,106 @@ header .icons a {
     background-color: tomato;
     color: white;
 }
+/* Стили для строк деталей заказа */
+.order-details-row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+.order-details-row label {
+    flex: 1;
+    text-align: right;
+    margin-right: 20px;
+    
+}
+.order-details-row input, .order-details-row textarea {
+    flex: 2;
+    text-align: left;
+}
+.order-details-row div {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.order-details-row input[type="radio"] {
+    margin-right: 5px;
+}
+
+/* Стили для продуктов */
+.order-composition {
+    margin-top: 20px;
+}
+.order-composition-item {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+.order-composition-item .label {
+    flex: 1;
+    text-align: right;
+    margin-right: 20px;
+}
+.order-composition-item .value {
+    flex: 2;
+    text-align: left;
+}
+
+/* Стили для кнопок внизу */
+.modal-footer {
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 20px;
+}
+.modal-footer button {
+    margin-right: 10px;
+}
+
+/* Стили для уведомлений */
+.notifications {
+    display: none;
+    background-color: #f8d7da;
+    color: #721c24;
+    padding: 10px;
+    text-align: center;
+    position: fixed;
+    top: 60px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
+}
+
+.notifications.success {
+    background-color: #d4edda;
+    color: #155724;
+}
+
+.notifications.info {
+    background-color: #d1ecf1;
+    color: #0c5460;
+}
+
+.notifications.error {
+    background-color: #f8d7da;
+    color: #721c24;
+}
+
+/* Стили для колонок таблицы */
+.orders-table th:nth-child(1), .orders-table td:nth-child(1) { width: 3%; }
+.orders-table th:nth-child(2), .orders-table td:nth-child(2) { width: 11%; }
+.orders-table th:nth-child(3), .orders-table td:nth-child(3) { width: 50%; }
+.orders-table th:nth-child(4), .orders-table td:nth-child(4) { width: 7%; }
+.orders-table th:nth-child(5), .orders-table td:nth-child(5) { width: 10%; }
+.orders-table th:nth-child(6), .orders-table td:nth-child(6) { width: 9%; }
+
+.footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    width: 100%;
+    bottom: 0;
+    position: fixed;
+}
