--- a/qqq/cart-styles.css
+++ b/qqq/cart-styles.css
@@ -5,7 +5,7 @@ body, html {
     height: 80%;
 }
 header {
-    background-color: #333;
+    background-color: #2c4464;
     color: white;
     padding: 16px 20px;
     display: flex;
@@ -96,7 +96,7 @@ header .icons a {
 .cart-item .remove-button {
     margin-top: auto;
     padding: 10px;
-    background-color: #333;
+    background-color: #2c4464;
     color: white;
     border: none;
     cursor: pointer;
@@ -136,7 +136,7 @@ header .icons a {
 }
 .form-buttons button {
     padding: 10px;
-    background-color: #333;
+    background-color: #2c4464;
     color: white;
     border: none;
     cursor: pointer;
@@ -176,7 +176,7 @@ h1 {
     margin-top: 5px;
 }
 .footer {
-    background-color: #333;
+    background-color: #2c4464;
     color: white;
     text-align: center;
     padding: 10px 0;
