--- a/qqq/orders-styles.css
+++ b/qqq/orders-styles.css
@@ -5,7 +5,7 @@ body, html {
     height: 80%;
 }
 header {
-    background-color: #333;
+    background-color: #2c4464;
     color: white;
     padding: 16px 20px;
     display: flex;
@@ -108,14 +108,14 @@ header .icons a {
     display: inline-block;
     padding: 10px;
     margin-top: 20px;
-    background-color: #f1eee9;
+    background-color: #aa9b9b;
     color: black;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
 .modal button:hover {
-    background-color: tomato;
+    background-color: #998a8a;
     color: white;
 }
 /* Стили для строк деталей заказа */
@@ -213,7 +213,7 @@ header .icons a {
 .orders-table th:nth-child(6), .orders-table td:nth-child(6) { width: 9%; }
 
 .footer {
-    background-color: #333;
+    background-color: #2c4464;
     color: white;
     text-align: center;
     padding: 10px 0;
