--- a/qqq/styles.css
+++ b/qqq/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #2c4464;
     color: white;
     padding: 10px 20px;
     display: flex;
@@ -147,7 +147,7 @@ header .icons img {
 .sidebar button {
     margin-top: 20px;
     padding: 10px;
-    background-color: #333;
+    background-color: #2c4464;
     color: white;
     border: none;
     cursor: pointer;
@@ -240,7 +240,7 @@ header .icons img {
 .products .product button {
     margin-top: auto;
     padding: 10px;
-    background-color: #333;
+    background-color: #2c4464;
     color: white;
     border: none;
     cursor: pointer;
@@ -249,7 +249,7 @@ header .icons img {
 }
 
 .footer {
-    background-color: #333;
+    background-color: #2c4464;
     color: white;
     text-align: center;
     padding: 10px 0;
