--- a/qqq/cart-styles.css
+++ b/qqq/cart-styles.css
@@ -1,8 +1,8 @@
 body, html {
     font-family: Arial, sans-serif;
-    margin: 3% 0;
+    margin: 0;
     padding: 0;
-    height: 80%;
+    height: 100%;
     overflow-x: hidden; /* убрать горизонтальную прокрутку */
 }
 header {
@@ -173,6 +173,7 @@ header .icons a {
 h1 {
     margin: 60px 40px 20px 0;
     padding: 0 20px;
+    margin-top: 6%;
 }
 #comment-container {
     margin-top: 5px;
@@ -184,6 +185,7 @@ h1 {
     padding: 10px 0;
     width: 100%;
     bottom: 0;
+    position: relative;
     /* position: fixed; */
 }
 /* Для устройств с шириной экрана до 992px */
