--- a/qqq/orders-styles.css
+++ b/qqq/orders-styles.css
@@ -1,10 +1,12 @@
 body, html {
     font-family: Arial, sans-serif;
-    margin: 3% 0;
+    margin: 0;
     padding: 0;
     height: 100%;
     overflow-x: hidden; /* убрать горизонтальную прокрутку */
+    box-sizing: border-box; /* Включает padding и border в общую ширину */
 }
+
 header {
     background-color: #2c4464;
     color: white;
@@ -18,9 +20,11 @@ header {
     z-index: 1001; /* хедер находится над уведомлениями */
     box-sizing: border-box; /* Включает padding и border в общую ширину */
 }
+
 header .logo {
     font-size: 24px;
 }
+
 header .icons a {
     margin-left: 5px;
     margin-right: 45px;
@@ -30,27 +34,34 @@ header .icons a {
 
 /* Стили для секции заказов */
 .orders-section {
-    padding: 0% 8%;
+    padding: 80px 8% 80px 8%; /* Увеличьте верхний и нижний отступы, чтобы избежать перекрытия хедером и футером */
+    box-sizing: border-box; /* Включает padding и border в общую ширину */
 }
+
 .orders-section h2 {
     margin-bottom: 20px;
 }
+
 /* Стили для таблицы заказов */
 .orders-table {
     width: 100%;
     border-collapse: collapse;
 }
+
 .orders-table th, .orders-table td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
 }
+
 .orders-table th {
     background-color: #f2f2f2;
 }
+
 .orders-table tr:nth-child(even) {
     background-color: #f9f9f9;
 }
+
 /* Стили для кнопок действий */
 .order-actions button {
     background: none;
@@ -58,6 +69,7 @@ header .icons a {
     cursor: pointer;
     margin-left: 5px;
 }
+
 /* Стили для модальных окон */
 .modal {
     display: none;
@@ -73,6 +85,7 @@ header .icons a {
     align-items: center;
     z-index: 1002;
 }
+
 .modal-content {
     background-color: #fefefe;
     margin: auto;
@@ -84,7 +97,9 @@ header .icons a {
     border-radius: 5px;
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     text-align: left;
+    box-sizing: border-box; /* Включает padding и border в общую ширину */
 }
+
 /* Стили для кнопки закрытия модального окна */
 .close {
     position: absolute;
@@ -93,18 +108,22 @@ header .icons a {
     font-size: 28px;
     font-weight: bold;
 }
+
 .close:hover,
 .close:focus {
     color: red;
     cursor: pointer;
 }
+
 /* Стили для заголовков и текста в модальных окнах */
 .modal h2 {
     margin-bottom: 20px;
 }
+
 .modal p {
     margin: 5px 0;
 }
+
 /* Стили для кнопок в модальных окнах */
 .modal button {
     display: inline-block;
@@ -116,31 +135,36 @@ header .icons a {
     border-radius: 5px;
     cursor: pointer;
 }
+
 .modal button:hover {
     background-color: #998a8a;
     color: white;
 }
+
 /* Стили для строк деталей заказа */
 .order-details-row {
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
 }
+
 .order-details-row label {
     flex: 1;
     text-align: right;
     margin-right: 20px;
-    
 }
+
 .order-details-row input, .order-details-row textarea {
     flex: 2;
     text-align: left;
 }
+
 .order-details-row div {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
+
 .order-details-row input[type="radio"] {
     margin-right: 5px;
 }
@@ -149,16 +173,19 @@ header .icons a {
 .order-composition {
     margin-top: 20px;
 }
+
 .order-composition-item {
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
 }
+
 .order-composition-item .label {
     flex: 1;
     text-align: right;
     margin-right: 20px;
 }
+
 .order-composition-item .value {
     flex: 2;
     text-align: left;
@@ -170,6 +197,7 @@ header .icons a {
     justify-content: flex-start;
     margin-top: 20px;
 }
+
 .modal-footer button {
     margin-right: 10px;
 }
@@ -221,13 +249,16 @@ header .icons a {
     padding: 10px 0;
     width: 100%;
     bottom: 0;
-    position: relative;
+    position: fixed;
+    box-sizing: border-box; /* Включает padding и border в общую ширину */
 }
+
 /* Стили для модального окна просмотра заказа */
 #viewModal .modal-content {
     width: 35%; /*  ширина модального окна */
     padding: 20px;
     font-family: Arial, sans-serif;
+    box-sizing: border-box; /* Включает padding и border в общую ширину */
 }
 
 #viewModal .order-details-row {
@@ -256,7 +287,7 @@ header .icons a {
 
 #viewModal .order-composition-item {
     width: 100%; /* всю ширину */
-    margin-bottom: 5px; 
+    margin-bottom: 5px;
     text-align: left;
 }
 
@@ -290,9 +321,10 @@ header .icons a {
 
 /* Стили для модального окна редактирования заказа */
 #editModal .modal-content {
-    width: 35%; 
+    width: 35%;
     padding: 20px;
     font-family: Arial, sans-serif;
+    box-sizing: border-box; /* Включает padding и border в общую ширину */
 }
 
 #editModal .order-details-row {
@@ -305,7 +337,7 @@ header .icons a {
 #editModal .order-details-row label {
     flex: 1;
     text-align: right;
-    margin-right: 10px; 
+    margin-right: 10px;
     font-weight: bold; /* Жирный шрифт для меток */
 }
 
@@ -321,7 +353,7 @@ header .icons a {
 
 #editModal .order-composition-item {
     width: 100%; /* Занимает всю ширину */
-    margin-bottom: 5px; 
+    margin-bottom: 5px;
     text-align: left;
 }
 
@@ -360,7 +392,7 @@ header .icons a {
     }
 
     .orders-section {
-        padding: 0 5%;
+        padding: 80px 5% 80px 5%;
     }
 
     .orders-table th:nth-child(3), .orders-table td:nth-child(3) {
@@ -382,7 +414,11 @@ header .icons a {
     }
 
     .orders-section {
-        padding: 0 2%;
+        padding: 80px 2% 80px 2%;
+    }
+
+    .orders-table th, .orders-table td {
+        padding: 5px;
     }
 
     .orders-table th:nth-child(3), .orders-table td:nth-child(3) {
@@ -398,7 +434,12 @@ header .icons a {
 /* Для устройств с шириной экрана до 480px */
 @media (max-width: 480px) {
     .orders-section {
-        padding: 0 1%;
+        padding: 80px 1% 80px 1%;
+    }
+
+    .orders-table th, .orders-table td {
+        padding: 5px;
+        font-size: 12px;
     }
 
     .orders-table th:nth-child(3), .orders-table td:nth-child(3) {
